--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "rectpack",
   "version": "0.0.1",
   "description": "",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
