--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,7 @@
     "target": "es2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
-    "paths": {
-      "@src/*": ["src/*"]
-    },
+    "baseUrl": "./src",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -23,6 +20,5 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "dist"],
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
