--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   ],
   "author": "Chintal Dholakiya chintal3198@gmail.com",
   "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chintal/rectpack-ts.git"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.11",
